package com.seproje.hospital.hasta;

import com.seproje.hospital.auth.AuthUserRepository;

public interface HastaRepository extends AuthUserRepository<Hasta> {
}