package com.seproje.hospital.hasta;

import org.springframework.data.jpa.repository.JpaRepository;

interface HastalikRepository extends JpaRepository<Hastalik, Long> {
}